// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Bad source input 1`] = `
Array [
  Object {
    "exn": Object {
      "RE_EXN_ID": "Caml_js_exceptions.Error/1",
      "_1": [TypeError: source.str.charAt is not a function],
    },
    "kind": "Compile",
    "location": undefined,
    "message": "An exception was thrown while compiling template \\"Template.\\" This is probably due to malformed input.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal binding names 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"null\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal binding names 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"false\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 10,
      "name": "BadCharacter",
    },
    "message": "Invalid character: \\"*\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 5,
      "name": "BadCharacter",
    },
    "message": "Unexpected character: \\"a\\". Expected: \\".\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 5,
      "name": "BadCharacter",
    },
    "message": "Unexpected character: \\"b\\". Expected: \\".\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 15,
      "name": "",
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 7,
      "name": "",
    },
    "message": "Invalid character: \\"%\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 7,
      "name": "",
    },
    "message": "Unexpected token: \\"b\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "BadCharacter",
    },
    "message": "Unexpected token: \\"?\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Illegal characters 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 9,
      "name": "",
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 7,
      "name": "BadString",
    },
    "message": "Unterminated string.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 8,
      "name": "",
    },
    "message": "Unterminated string.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 4,
      "name": "",
    },
    "message": "Unterminated comment.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 4,
      "name": "BadComment",
    },
    "message": "Unterminated comment.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 6,
      "name": "",
    },
    "message": "Unexpected end of file.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 5,
      "name": "BadIdentifier",
    },
    "message": "\\"--1\\" is an illegal identifier name.",
    "stack": Array [],
  },
]
`;

exports[`Lexer Other stuff 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "char": 6,
      "name": "InvalidEscapeToken",
    },
    "message": "Unknown escape sequence: a.",
    "stack": Array [],
  },
]
`;

exports[`Matching: partial matching Dictionary partial matches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
_",
    "stack": Array [],
  },
]
`;

exports[`Matching: partial matching Integers 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
1",
    "stack": Array [],
  },
]
`;

exports[`Matching: partial matching Lists 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
[_, ..._]",
    "stack": Array [],
  },
]
`;

exports[`Matching: partial matching Lists 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
[]",
    "stack": Array [],
  },
]
`;

exports[`Matching: partial matching Records 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
{a, b: 0}",
    "stack": Array [],
  },
]
`;

exports[`Matching: unused patterns Basic patterns 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 76,
      "name": "",
    },
    "message": "This match case is unused:
10, 11, 12",
    "stack": Array [],
  },
]
`;

exports[`Matching: unused patterns Basic patterns 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 120,
      "name": "",
    },
    "message": "This match case is unused:
30, 31, 42",
    "stack": Array [],
  },
]
`;

exports[`Matching: unused patterns Nests merge into wildcards correctly 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 51,
      "name": "",
    },
    "message": "This match case is unused:
(_, _), 40",
    "stack": Array [],
  },
]
`;

exports[`Matching: unused patterns Unused nest patterns are reported correctly. 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 82,
      "name": "",
    },
    "message": "This match case is unused:
(\\"a\\", \\"b\\"), 1",
    "stack": Array [],
  },
]
`;

exports[`Parser Components that didn't compile are reported correctly 1`] = `
Object {
  "NAME": "errors",
  "VAL": Array [
    Object {
      "exn": undefined,
      "kind": "Syntax",
      "location": Object {
        "char": 2,
        "name": "A",
      },
      "message": "Unexpected end of file.",
      "stack": Array [],
    },
  ],
}
`;

exports[`Parser Duplicate components are reported correctly 1`] = `
Object {
  "NAME": "errors",
  "VAL": Array [
    Object {
      "exn": undefined,
      "kind": "Compile",
      "location": undefined,
      "message": "The template component name \\"A\\" was used twice. Every component needs a unique name.",
      "stack": Array [],
    },
  ],
}
`;

exports[`Parser Illegal binding name 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 16,
      "name": "",
    },
    "message": "Only bindings are allowed as list tails.",
    "stack": Array [],
  },
]
`;

exports[`Parser Illegal binding name 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"null\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Invalid statements 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "BadStatement",
    },
    "message": "Unexpected token: \\"c\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"{\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"[\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"}\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"]\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\",\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 9,
      "name": "",
    },
    "message": "Unexpected token: \\"/\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\":\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"1\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 27,
      "name": "",
    },
    "message": "Unexpected token: \\"[end of file]\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 30,
      "name": "",
    },
    "message": "Unexpected token: \\"[end of file]\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 12`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"/\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 13`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 7,
      "name": "",
    },
    "message": "Unexpected token: \\"#\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 14`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 20,
      "name": "",
    },
    "message": "Unexpected token: \\"[text]:  d\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 15`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 7,
      "name": "",
    },
    "message": "Unexpected token: \\"1\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 16`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "Unexpected token: \\"...\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 17`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "Unexpected token: \\"=\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 18`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 9,
      "name": "",
    },
    "message": "Unexpected token: \\"~\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 19`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 7,
      "name": "",
    },
    "message": "Unexpected token: \\"match\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser Unexpected tokens 20`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"&\\".",
    "stack": Array [],
  },
]
`;

exports[`Parser You can't unescape child templates 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 4,
      "name": "",
    },
    "message": "Unexpected token: \\"A\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Count mismatch failure 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 9,
      "name": "",
    },
    "message": "The number of patterns does not match the number of data.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Count mismatch failure 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "Map blocks can only have two patterns per \\"with\\" clause: the item and the index.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Illegal bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 24,
      "name": "",
    },
    "message": "Unexpected token: \\"Abc\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Illegal bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 23,
      "name": "",
    },
    "message": "Unexpected token: \\"null\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Illegal bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 23,
      "name": "",
    },
    "message": "Unexpected token: \\"true\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Illegal bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 24,
      "name": "",
    },
    "message": "Unexpected token: \\"false\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Illegal bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 4,
      "name": "",
    },
    "message": "Unexpected token: \\"null\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "Input is missing JSON object key \\"b\\" which is required.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "Input is missing JSON object key \\"b\\" which is required.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON null\\", which does not match the template's required type, [int].",
    "stack": Array [
      "key: c",
    ],
  },
]
`;

exports[`Patterns Missing child components are reported correctly. 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This call of component \\"A\\" is missing child \\"B.\\"",
    "stack": Array [],
  },
]
`;

exports[`Patterns Missing child components are reported correctly. 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This call of component \\"A\\" includes unexpected child \\"C.\\"",
    "stack": Array [],
  },
]
`;

exports[`Patterns Non-exhuastive matching 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 10,
      "name": "",
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
{favoriteColor: \\"a\\", firstName}",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 31,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type int.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 31,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type int.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type [int].",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type [int].",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 39,
      "name": "",
    },
    "message": "This pattern is type boolean but expected type {\\"a\\": _}.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 31,
      "name": "",
    },
    "message": "This pattern is type [int] but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 31,
      "name": "",
    },
    "message": "This pattern is type [int] but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 32,
      "name": "",
    },
    "message": "This pattern is type [int] but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type [_] but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 29,
      "name": "",
    },
    "message": "This pattern is type [_] but expected type int.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 39,
      "name": "",
    },
    "message": "This pattern is type [_] but expected type {\\"a\\": _}.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors List pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 39,
      "name": "",
    },
    "message": "This pattern is type int but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Record pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 32,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": _} but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Record pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": _} but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Record pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 34,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": _} but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Record pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 31,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": _} but expected type [_].",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Record pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 30,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": _} but expected type int.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors Record pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 36,
      "name": "",
    },
    "message": "This pattern is type int but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors number pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type int but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors number pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 34,
      "name": "",
    },
    "message": "This pattern is type int but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors number pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 35,
      "name": "",
    },
    "message": "This pattern is type int but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors number pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 32,
      "name": "",
    },
    "message": "This pattern is type int but expected type [_].",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors number pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 39,
      "name": "",
    },
    "message": "This pattern is type int but expected type {\\"a\\": _}.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors string pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 31,
      "name": "",
    },
    "message": "This pattern is type string but expected type int.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors string pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 34,
      "name": "",
    },
    "message": "This pattern is type string but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors string pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 35,
      "name": "",
    },
    "message": "This pattern is type string but expected type boolean.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors string pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 33,
      "name": "",
    },
    "message": "This pattern is type string but expected type [int].",
    "stack": Array [],
  },
]
`;

exports[`Patterns Type errors string pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 39,
      "name": "",
    },
    "message": "This pattern is type string but expected type {\\"a\\": _}.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 16,
      "name": "",
    },
    "message": "Unexpected token: \\"}\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 17,
      "name": "",
    },
    "message": "Unexpected token: \\",\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 17,
      "name": "",
    },
    "message": "Unexpected token: \\"1\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 21,
      "name": "",
    },
    "message": "Unexpected token: \\"[\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 19,
      "name": "",
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 20,
      "name": "",
    },
    "message": "Unexpected token: \\",\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 16,
      "name": "",
    },
    "message": "Only bindings are allowed as list tails.",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 24,
      "name": "",
    },
    "message": "Unexpected token: \\"]\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 25,
      "name": "",
    },
    "message": "Unexpected token: \\"[\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 25,
      "name": "",
    },
    "message": "Unexpected token: \\"b\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 19,
      "name": "",
    },
    "message": "Unexpected token: \\"b\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 12`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 19,
      "name": "",
    },
    "message": "Unexpected token: \\"]\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 13`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 11,
      "name": "",
    },
    "message": "Unexpected token: \\"}\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 14`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 11,
      "name": "",
    },
    "message": "Unexpected token: \\"match\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 15`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 18,
      "name": "",
    },
    "message": "Unexpected token: \\"a\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 16`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 26,
      "name": "",
    },
    "message": "Unexpected token: \\"map\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 17`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 26,
      "name": "",
    },
    "message": "Unexpected token: \\"1\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 18`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 13,
      "name": "",
    },
    "message": "Unexpected token: \\"B\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 19`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 13,
      "name": "",
    },
    "message": "Unexpected token: \\"1\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns Unexpected tokens 20`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "char": 5,
      "name": "",
    },
    "message": "Unexpected token: \\"1\\".",
    "stack": Array [],
  },
]
`;

exports[`Patterns You can't bind a value more than once. 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "char": 20,
      "name": "",
    },
    "message": "\\"x\\" is bound multiple times in this pattern.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Error messages display component name correctly 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This call of component \\"A\\" is missing prop \\"a\\" of type echoable.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Exceptions thrown in components are caught correctly 1`] = `
Array [
  Object {
    "exn": Object {
      "Error": [Error],
      "RE_EXN_ID": "Failure",
      "_1": "fail.",
    },
    "kind": "Render",
    "location": Object {
      "char": 3,
      "name": "ExceptionsTest",
    },
    "message": "Template component \\"A\\" threw an exception.",
    "stack": Array [
      "ExceptionsTest",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON string\\", which does not match the template's required type, [{\\"a\\": echoable}].",
    "stack": Array [
      "key: a",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON boolean\\", which does not match the template's required type, [{\\"a\\": echoable}].",
    "stack": Array [
      "key: b",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON string\\", which does not match the template's required type, [int].",
    "stack": Array [
      "key: a",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "Input is missing JSON object key \\"z\\" which is required.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Map type mismatches 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": int} but expected type [echoable].",
    "stack": Array [],
  },
]
`;

exports[`Rendering Map type mismatches 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern is type string but expected type int.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Map type mismatches 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern is type {\\"a\\": int} but expected type <echoable>.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Map type mismatches 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "This pattern is type int but expected type string.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "Input is missing JSON object key \\"z\\" which is required.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "Children are not allowed in root templates, only in components.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Compile",
    "location": Object {
      "char": 3,
      "name": "",
    },
    "message": "Template component \\"Z\\" is missing, which is required by \\"<root>.\\"",
    "stack": Array [],
  },
]
`;

exports[`Rendering Missing bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 7,
      "name": "",
    },
    "message": "Children are not allowed in root templates, only in components.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Missing bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "Input is missing JSON object key \\"b\\" which is required.",
    "stack": Array [],
  },
]
`;

exports[`Rendering Type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON boolean\\", which does not match the template's required type, echoable.",
    "stack": Array [
      "key: b",
    ],
  },
]
`;

exports[`Rendering Type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON array\\", which does not match the template's required type, echoable.",
    "stack": Array [
      "key: c",
    ],
  },
]
`;

exports[`Rendering Type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": undefined,
    "message": "This input is type \\"JSON boolean\\", which does not match the template's required type, echoable.",
    "stack": Array [
      "key: b",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly components 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "char": 26,
      "name": "B",
    },
    "message": "This call of component \\"C\\" is missing prop \\"c\\" of type echoable.",
    "stack": Array [],
  },
]
`;
